// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parseCliOptions should attempt to parse args with --allowed-hosts 1`] = `
{
  "docsHost": false,
  "http": {
    "allowedHosts": [
      "localhost",
      "127.0.0.1",
    ],
  },
  "isHttp": true,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --allowed-origins 1`] = `
{
  "docsHost": false,
  "http": {
    "allowedOrigins": [
      "https://app.com",
      "https://admin.app.com",
    ],
  },
  "isHttp": true,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --docs-host flag 1`] = `
{
  "docsHost": true,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --http and --host 1`] = `
{
  "docsHost": false,
  "http": {
    "host": "0.0.0.0",
  },
  "isHttp": true,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --http and --port 1`] = `
{
  "docsHost": false,
  "http": {
    "port": 6000,
  },
  "isHttp": true,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --http and invalid --port 1`] = `
{
  "docsHost": false,
  "http": {
    "port": 0,
  },
  "isHttp": true,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --http flag 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": true,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --log-level flag 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "warn",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --log-stderr flag and --log-protocol flag 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": true,
    "stderr": true,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --verbose flag 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "debug",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with --verbose flag and --log-level flag 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "debug",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args with other arguments 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;

exports[`parseCliOptions should attempt to parse args without --docs-host flag 1`] = `
{
  "docsHost": false,
  "http": {},
  "isHttp": false,
  "logging": {
    "level": "info",
    "logger": "@patternfly/patternfly-mcp",
    "protocol": false,
    "stderr": false,
    "transport": "stdio",
  },
  "pluginIsolation": undefined,
  "toolModules": [],
}
`;
